yml/NFSDirect/nfsDirect.deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nfs-direct-site
  namespace: pv-nfs
  name: nfs-direct-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nfs-direct-site
  template:
    metadata:
      labels:
        app: nfs-direct-site
    spec:
      volumes:
        - name: nfs-direct-volume
          persistentVolumeClaim:
            claimName: nfs-direct-pvc
      containers:
        - image: nginx
          name: nfs-direct-site
          resources:
            limits:
              cpu: 100Mi  # CPU 
              memory: 100Mi
          volumeMounts:
            - name: nfs-direct-volume
              mountPath: /usr/share/nginx/html
