yml/NFSDirect/nfsDirect.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: pv-nfs
  name: nfs-direct-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: nfs-direct.192.168.2.101.nip.io
    http:
      paths:
      - path: / 
        pathType: ImplementationSpecific       
        backend:
          service:
            name: nfs-direct-service
            port: 
              number: 80
